--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@400;700&family=Montserrat:wght@600&family=Philosopher:wght@400;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>HorseClub</title>
 </head>
 <body>
@@ -74,7 +74,7 @@
 <main class="main">
   <section class="hero">
    <div class="container-fluid">
-    <img src="/assets/image/header-bg.jpg" alt="" class="header-bg">
+    <img src="assets/image/header-bg.jpg" alt="" class="header-bg">
    </div>
   <!-- /.container-fluid -->
     <div class="container">
@@ -110,7 +110,7 @@
         <!-- /.row -->
         <div class="row">
           <div class="col-lg-6 col-md-5 col-12">
-            <img src="/assets/image/about-img.jpg" alt="" class="about-img">
+            <img src="assets/image/about-img.jpg" alt="" class="about-img">
           </div>
           <!-- /.col-6 -->
           <div class="col-lg-6 col-md-7 col-12 text-center text-md-start  ">
