--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
     <div class="container-fluid">
       <div class="club-bg">
         <div class="club-bg-bg">
-          <img src="/assets/image/horse-woomen.png" alt="" class="club-horse">
-          <img src="/assets/image/horse-children.png" alt="" class="club-horse-child">
-          <img src="/assets/image/cloud.png" alt="" class="club-horse-cloud">
+          <img src="assets/image/horse-woomen.png" alt="" class="club-horse">
+          <img src="assets/image/horse-children.png" alt="" class="club-horse-child">
+          <img src="assets/image/cloud.png" alt="" class="club-horse-cloud">
           <div class="container">
             <div class="club-wrapper">
               <div class="row">
@@ -407,55 +407,55 @@
             <div class="slider">
               <div class="slider-item">
                 <div class="lupa"> <div class="lupa-o" ></div></div>
-                <img src="/assets/image/slider1.jpg" alt="" class="visitors-img-slider" data-fancybox>
+                <img src="assets/image/slider1.jpg" alt="" class="visitors-img-slider" data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider2.jpg" alt="" class="visitors-img-slider" data-fancybox>
+                <img src="assets/image/slider2.jpg" alt="" class="visitors-img-slider" data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider2.jpg" alt="" class="visitors-img-slider" data-fancybox>
+                <img src="assets/image/slider2.jpg" alt="" class="visitors-img-slider" data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider3.jpg" alt="" class="visitors-img-slider" data-fancybox>
+                <img src="assets/image/slider3.jpg" alt="" class="visitors-img-slider" data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider3.jpg" alt="" class="visitors-img-slider" data-fancybox>
+                <img src="assets/image/slider3.jpg" alt="" class="visitors-img-slider" data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider6.jpg" alt="" class="visitors-img-slider"  data-fancybox>
+                <img src="assets/image/slider6.jpg" alt="" class="visitors-img-slider"  data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider4.jpg" alt="" class="visitors-img-slider"  data-fancybox>
+                <img src="assets/image/slider4.jpg" alt="" class="visitors-img-slider"  data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
+                <img src="assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
+                <img src="assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
+                <img src="assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
+                <img src="assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
+                <img src="assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
               </div>
               <!-- /.slider-item -->
               <div class="slider-item">
-                <img src="/assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
+                <img src="assets/image/slider8.jpg" alt="" class="visitors-img-slider"  data-fancybox>
               </div>
               <!-- /.slider-item -->
               
@@ -491,7 +491,7 @@
           <div class="horse-slider text-center">
             <div class="horse-slider-item">
               <div class="horse-card">
-                <img src="/assets/image/horse-slider.jpg" alt="" class="horse-img">
+                <img src="assets/image/horse-slider.jpg" alt="" class="horse-img">
               </div>
               <!-- /.horse-card -->
               <div class="horse-slider-title">
@@ -504,7 +504,7 @@
             <!-- /.horse-slider-item -->
             <div class="horse-slider-item">
               <div class="horse-card">
-                <img src="/assets/image/horse-slider.jpg" alt="" class="horse-img">
+                <img src="assets/image/horse-slider.jpg" alt="" class="horse-img">
               </div>
               <!-- /.horse-card -->
               <div class="horse-slider-title">
@@ -517,7 +517,7 @@
             <!-- /.horse-slider-item -->
             <div class="horse-slider-item">
               <div class="horse-card">
-                <img src="/assets/image/horse-slider.jpg" alt="" class="horse-img">
+                <img src="assets/image/horse-slider.jpg" alt="" class="horse-img">
               </div>
               <!-- /.horse-card -->
               <div class="horse-slider-title">
@@ -530,7 +530,7 @@
             <!-- /.horse-slider-item -->
             <div class="horse-slider-item">
               <div class="horse-card">
-                <img src="/assets/image/horse-slider.jpg" alt="" class="horse-img">
+                <img src="assets/image/horse-slider.jpg" alt="" class="horse-img">
               </div>
               <!-- /.horse-card -->
               <div class="horse-slider-title">
@@ -544,7 +544,7 @@
             
             <div class="horse-slider-item">
               <div class="horse-card">
-                <img src="/assets/image/horse-slider.jpg" alt="" class="horse-img">
+                <img src="assets/image/horse-slider.jpg" alt="" class="horse-img">
               </div>
               <!-- /.horse-card -->
               <div class="horse-slider-title">
@@ -576,10 +576,10 @@
   <!-- /.horse -->
   <section class="form">
     <div class="container-fluid form-bg">
-     <img src="/assets/image/bushes-popup.png" alt="" class="form-img__bushes">
-     <img src="/assets/image/girl-horse.png" alt="" class="form-img__girl">
-     <img src="/assets/image/cloud-popup.png" alt="" class="form-img__cloud">
-     <img src="/assets/image/form_cloud_down.png" alt="" class="form-img__cloud_down">
+     <img src="assets/image/bushes-popup.png" alt="" class="form-img__bushes">
+     <img src="assets/image/girl-horse.png" alt="" class="form-img__girl">
+     <img src="assets/image/cloud-popup.png" alt="" class="form-img__cloud">
+     <img src="assets/image/form_cloud_down.png" alt="" class="form-img__cloud_down">
       <div class="container">
         <div class="row">
           <div class="col-12 form-wrap">
@@ -647,7 +647,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="clients-wrap">
-                      <img src="/assets/image/clients.png" alt="" class="clients-photo">
+                      <img src="assets/image/clients.png" alt="" class="clients-photo">
                       <div class="clients-social">
                         <p class="clients-name">Константин Сюткин</p>
                         <p class="clients-social-link">
@@ -691,7 +691,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="clients-wrap">
-                      <img src="/assets/image/clients.png" alt="" class="clients-photo">
+                      <img src="assets/image/clients.png" alt="" class="clients-photo">
                       <div class="clients-social">
                         <p class="clients-name">Константин Сюткин</p>
                         <p class="clients-social-link">
@@ -733,7 +733,7 @@
            style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
          <div class="contact-tree">
-          <img src="/assets/image/tree.png" alt="" class="tree">
+          <img src="assets/image/tree.png" alt="" class="tree">
          </div>
          <!-- /.contact-tree -->
       </div>
@@ -835,11 +835,11 @@
 
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-<script src="/assets/js/slick.min.js"></script>
+<script src="assets/js/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 <script src="https://kit.fontawesome.com/42e2cda77f.js" crossorigin="anonymous"></script>
-<script src="/assets/js/myjs.js"></script>
+<script src="assets/js/myjs.js"></script>
 </body>
 </html>
